After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643242 - gdk_window_set_background: assertion `GDK_IS_WINDOW (window)' failed
gdk_window_set_background: assertion `GDK_IS_WINDOW (window)' failed
Status: RESOLVED FIXED
Product: gnome-screensaver
Classification: Deprecated
Component: dialog
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-screensaver maintainers
gnome-screensaver maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-24 22:43 UTC by Colin Walters
Modified: 2011-03-01 19:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gs-window-x11: If not realized, don't clear (989 bytes, patch)
2011-02-24 22:45 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2011-02-24 22:43:34 UTC
Getting the following stack:

Program received signal SIGTRAP, Trace/breakpoint trap.
g_logv (log_domain=0xafa4d3 "Gdk", log_level=<optimized out>, format=0xcc8d7c "%s: assertion `%s' failed", 
    args1=0xbfe8805c  <incomplete sequence \361\257>) at gmessages.c:563
563		  g_private_set (g_log_depth, GUINT_TO_POINTER (depth));
(gdb) bt
  • #0 g_logv
    at gmessages.c line 563
  • #1 g_log
    at gmessages.c line 577
  • #2 g_return_if_fail_warning
  • #3 gdk_window_set_background
    at gdkwindow.c line 6500
  • #4 clear_widget
    at gs-window-x11.c line 264
  • #5 gs_window_clear
    at gs-window-x11.c line 274
  • #6 gs_manager_set_throttled
    at gs-manager.c line 390
  • #7 g_cclosure_marshal_VOID__BOOLEAN
    at gmarshal.c line 113
  • #8 g_closure_invoke
    at gclosure.c line 767
  • #9 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #10 g_signal_emit_valist
    at gsignal.c line 2983
  • #11 g_signal_emit
    at gsignal.c line 3040
  • #12 gs_listener_set_throttle
    at gs-listener-dbus.c line 344
  • #13 listener_check_throttle
    at gs-listener-dbus.c line 358
  • #14 listener_ref_entry_check
    at gs-listener-dbus.c line 599
  • #15 listener_ref_entry_check
    at gs-listener-dbus.c line 591
  • #16 listener_add_ref_entry
    at gs-listener-dbus.c line 726
  • #17 listener_add_ck_ref_entry
    at gs-listener-dbus.c line 872
  • #18 listener_dbus_handle_system_message
    at gs-listener-dbus.c line 1537
  • #19 listener_dbus_system_filter_function
    at gs-listener-dbus.c line 1718
  • #20 dbus_connection_dispatch
    at dbus-connection.c line 4647
  • #21 message_queue_dispatch
    at dbus-gmain.c line 101
  • #22 g_main_dispatch
    at gmain.c line 2440
  • #23 g_main_context_dispatch
    at gmain.c line 3013
  • #24 g_main_context_iterate
    at gmain.c line 3091
  • #25 g_main_context_iteration
    at gmain.c line 3154
  • #26 gtk_main_iteration
    at gtkmain.c line 1449
  • #27 gs_manager_activate
    at gs-manager.c line 1751
  • #28 gs_manager_set_active
    at gs-manager.c line 1798
  • #29 listener_active_changed_cb
    at gs-monitor.c line 245
  • #30 gs_marshal_BOOLEAN__BOOLEAN
    at gs-marshal.c line 161
  • #31 g_closure_invoke
    at gclosure.c line 767
  • #32 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #33 g_signal_emit_valist
  • #34 g_signal_emit
    at gsignal.c line 3040
  • #35 gs_listener_set_active
    at gs-listener-dbus.c line 416
  • #36 gs_monitor_lock_screen
    at gs-monitor.c line 178
  • #37 listener_lock_cb
    at gs-monitor.c line 201
  • #38 listener_lock_cb
    at gs-monitor.c line 197
  • #39 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #40 g_closure_invoke
    at gclosure.c line 767
  • #41 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #42 g_signal_emit_valist
    at gsignal.c line 2983
  • #43 g_signal_emit
    at gsignal.c line 3040
  • #44 listener_dbus_handle_session_message
    at gs-listener-dbus.c line 1375
  • #45 listener_dbus_filter_function
    at gs-listener-dbus.c line 1691
  • #46 dbus_connection_dispatch
    at dbus-connection.c line 4647
  • #47 message_queue_dispatch
    at dbus-gmain.c line 101
  • #48 g_main_dispatch
    at gmain.c line 2440
  • #49 g_main_context_dispatch
    at gmain.c line 3013
  • #50 g_main_context_iterate
    at gmain.c line 3091
  • #51 g_main_loop_run
    at gmain.c line 3299
  • #52 gtk_main
    at gtkmain.c line 1349
  • #53 main
    at gnome-screensaver.c line 111

Comment 1 Colin Walters 2011-02-24 22:45:57 UTC
Created attachment 181877 [details] [review]
gs-window-x11: If not realized, don't clear

This avoids tripping an assertion I was hitting where the widget
wasn't yet realized, and thus gtk_widget_get_window() returned NULL.
Comment 2 Colin Walters 2011-03-01 19:02:40 UTC
Attachment 181877 [details] pushed as cee2133 - gs-window-x11: If not realized, don't clear