gs-window-x11: If not realized, don't clear

This avoids tripping an assertion I was hitting where the widget
wasn't yet realized, and thus gtk_widget_get_window() returned NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=643242